--- a/nanos-lite/Makefile
+++ b/nanos-lite/Makefile
@@ -1,4 +1,4 @@
-#HAS_NAVY = 1
+HAS_NAVY = 1
 RAMDISK_FILE = build/ramdisk.img
 
 NAME = nanos-lite
@@ -10,7 +10,6 @@ ISA = am_native
 else
 INC_PATH += include $(NAVY_HOME)/libs/libc/include
 endif
-
 ./src/resources.S: $(RAMDISK_FILE)
 	@touch $@
 
